<resources>
    <string name="app_name">GEPP</string>
    <string name="app_path_photo">/sdcard/GEPP/</string>
    <string name="app_db_name">GEPP.db</string>
    <string name="app_share_preference_name">PromShare</string>
    <string name="app_share_preference_user_account">user_account</string>
    <string name="app_share_preference_user_pass">user_pass</string>
    <string name="network_ip">https://gepp.gshp-apps.com</string>
    <string name="network_context">service/rest/</string>
    <string name="loggin_hint_user">Nombre de usuario</string>
    <string name="loggin_hint_pass">Contraseña</string>
    <string name="dialog_account_delete_data">Ha cambiado de usuario, todos los datos anteriores seran eliminados\n ¿Desea continuar?</string>
    <string name="dialog_account">CREDENCIALES</string>
    <string name="dialog_synch">SINCRONIZACIÓN</string>
    <string name="app_btn_continue">CONTINUAR</string>
    <string name="app_btn_next">SIGUIENTE</string>
    <string name="app_btn_accept">ACEPTAR</string>
    <string name="app_btn_cancel">CANCELAR</string>
    <string name="app_btn_into">ENTRAR</string>
    <string name="app_btn_save">GUARDAR</string>
    <string name="created">GENERAR</string>
    <string name="app_share_preference_privacy_politic">privacy_politic</string>
    <string name="dialog_politics">TÉRMINOS Y CONDICIONES</string>
    <string name="accept">ACEPTAR"</string>
    <string name="app_share_preference_time_synch">time_synch</string>
    <string name="dialog_change_password">CAMBIO DE CONTRASEÑA</string>
    <string name="dialog_change_password_actual">Contraseña Actual:</string>
    <string name="dialog_change_password_new">Contraseña Nueva:</string>
    <string name="dialog_change_password_confirm">Confirmar Contraseña:</string>
    <string name="dialog_change_password_btn">CAMBIAR</string>
    <string name="error_empty_user_name">Ingrese nombre de usuario</string>
    <string name="error_empty_password">Ingrese su contraseña</string>
    <string name="network_sc_conflict">Sincronización fallida, intentelo\nmás tarde</string>
    <string name="network_sc_precondition_failed">Su contraseña ha caducado,¡debe actualizarlo!</string>
    <string name="network_sc_unauthorized">Verificar credenciales.</string>
    <string name="network_no_content">Uds. no cuenta con la siguiente información</string>
    <string name="network_error">Error de red, verifique su conexión o intentelo más tarde</string>
    <string name="network_server_disable">El servidor se encuentra en mantenimiento, Intentelo más tarde</string>
    <string name="network_forbidden">Su cuenta ha sido desactivada</string>
    <string name="app_download_apk">https://s3-us-west-1.amazonaws.com/gshpapps/Nestle/Cop/Nestle_COP.apk</string>
    <string name="app_path_apk">sdcard/Gepp/Gepp.apk</string>
    <string name="app_bundle_name">bundle</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="title_menu_home_sync">Sincronizar</string>
    <string name="title_menu_home_account">Cuenta</string>
    <string name="title_menu_home_help">Help</string>
    <string name="title_menu_home_send_db">Enviar DB</string>
    <string name="title_menu_home_about">Acerca de</string>
    <string name="title_menu_home_setting">Configuración</string>
    <string name="title_menu_home_change_password">Cambio de contraseña</string>
    <string name="action_call_technical_suport_metropoli_gshp">tel:52791985</string>
    <string name="label_delete_visit">ELIMINAR VISITA</string>
    <string name="labeldialog_finish_visit">¿Está seguro de cerrar la visita?</string>
</resources>