<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGeneral"
    tools:context="net.gshp.gepp.activity.Schedule">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </include>

    <TextView
        android:id="@+id/txtLabelSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="AGENDA" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtLabelSchedule">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtmonday"
                    style="@style/diasAgenda"
                    android:text="@string/lunes" />

                <TextView
                    android:id="@+id/txtTuesday"
                    style="@style/diasAgenda"
                    android:text="@string/martes" />

                <TextView
                    android:id="@+id/txtWednesday"
                    style="@style/diasAgenda"
                    android:text="@string/miercoles" />

                <TextView
                    android:id="@+id/txtThursday"
                    style="@style/diasAgenda"
                    android:text="@string/jueves" />

                <TextView
                    android:id="@+id/txtFriday"
                    style="@style/diasAgenda"
                    android:text="@string/viernes" />

                <TextView
                    android:id="@+id/txtSaturday"
                    style="@style/diasAgenda"
                    android:text="@string/sabado" />

                <TextView
                    android:id="@+id/txtSunday"
                    style="@style/diasAgenda"
                    android:text="@string/domingo" />
            </LinearLayout>

            <GridView
                android:id="@+id/gridRutero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnWidth="180dp"
                android:horizontalSpacing="1dp"
                android:numColumns="7"
                android:verticalSpacing="5dp" />
        </LinearLayout>
    </HorizontalScrollView>
    <ProgressBar
        android:id="@+id/prg_load"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
