<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGeneral"
    android:minWidth="300dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_dialog_shape">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/title_text_toolbar_style_dialog"
            android:text="@string/label_delete_visit" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_top"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/labeldialog_finish_visit" />


    <LinearLayout
        android:id="@+id/lyt_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_message"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/style_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/app_btn_cancel" />

        <Button
            android:id="@+id/btn_agree"
            style="@style/style_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_btn_accept" />
    </LinearLayout>


</RelativeLayout>