<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rlt_authentication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"

        android:elevation="2dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loggin_hint_user"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_user"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loggin_hint_pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_sync"
            style="@style/style_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_pass"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/app_btn_into" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rlt_authentication"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <RelativeLayout
        android:id="@+id/rlyt_delete_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_message_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_account_delete_data"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_message_delete"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sync_agree"
                style="@style/style_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_btn_continue" />

            <Button
                android:id="@+id/btn_sync_cancel"
                style="@style/style_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_btn_cancel" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlyt_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/id_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:max="100"
            android:minWidth="5dp"
            android:progress="1"
            android:progressDrawable="@drawable/custom_progressbar" />

        <TextView
            android:id="@+id/txtPorcent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_progressbar"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_next"
            style="@style/style_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPorcent"
            android:layout_gravity="bottom"
            android:text="@string/app_btn_continue"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>
